--- a/todo/public/index.html
+++ b/todo/public/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>ToDoList by.lake</title>
+    <link rel="stylesheet" href="../css/reset.css">
     </head>
 <body>
     <div class = "root">
-        
     </div>
 </body>
 </html>
